--- a/App/app/src/main/res/layout/activity_maps_get_user_location.xml
+++ b/App/app/src/main/res/layout/activity_maps_get_user_location.xml
@@ -31,16 +31,17 @@
             android:src="@drawable/ic_magnify"/>
 
         <EditText
+            android:id="@+id/input_search"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@+id/ic_magnify"
             android:layout_centerVertical="true"
-            android:textSize="15sp"
-            android:textColor="#000"
-            android:id="@+id/input_search"
+            android:layout_toRightOf="@+id/ic_magnify"
             android:background="@null"
             android:hint="Enter Address, City or Zip Code"
-            android:imeOptions="actionSearch"/>
+            android:imeOptions="actionSearch"
+            android:singleLine="true"
+            android:textColor="#000"
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
