--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,6 @@
         android:id="@+id/newEmailText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/passwordText"
-        android:layout_marginBottom="24dp"
         android:ems="10"
         android:hint="Email Address"
         android:inputType="textEmailAddress" />
@@ -19,8 +17,6 @@
         android:id="@+id/passwordText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="269dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -31,24 +27,24 @@
         android:id="@+id/signupButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/toolbar2"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginBottom="63dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="626dp"
+        android:layout_marginEnd="0dp"
         android:text="Sign up" />
 
     <Button
         android:id="@+id/signInButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/toolbar2"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="528dp"
-        android:layout_marginEnd="-1dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="539dp"
+        android:layout_marginEnd="-3dp"
         android:text="Sign in" />
 
 
@@ -56,8 +52,12 @@
         android:id="@+id/toolbar2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
         android:background="@color/colorAccent"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
@@ -67,10 +67,8 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="290dp"
-        android:layout_above="@+id/newEmailText"
-        android:layout_below="@+id/toolbar2"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_below="@+id/newEmailText"
+        android:layout_marginTop="11dp"
         app:srcCompat="@drawable/loginlogo" />
 
 </RelativeLayout>
