--- a/App/app/src/main/res/layout/activity_find_ride.xml
+++ b/App/app/src/main/res/layout/activity_find_ride.xml
@@ -144,8 +144,8 @@
 
     <Button
         android:id="@+id/buttonFindDrivers"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="165dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="8dp"
