--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -103,6 +103,7 @@
         android:layout_marginTop="13dp"
         android:layout_marginEnd="28dp"
         android:text="Forgot Password?"
+        android:textAlignment="viewEnd"
         android:textColor="#0002FE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordText" />
