--- a/App/app/src/main/res/layout/activity_user_main_page.xml
+++ b/App/app/src/main/res/layout/activity_user_main_page.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginBottom="20dp"
-        android:text="Help!"
+        android:text="Help"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
