OnGoing Notification added, Version Number shown on main page

--- a/App/app/src/main/res/layout/activity_user_main_page.xml
+++ b/App/app/src/main/res/layout/activity_user_main_page.xml
@@ -87,4 +87,18 @@
         app:layout_constraintBottom_toTopOf="@+id/helpButton"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/versionTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/signOutMPButton"
+        app:layout_constraintStart_toEndOf="@+id/helpButton"
+        app:layout_constraintTop_toBottomOf="@+id/stopProvidingBtn" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
