--- a/App/app/src/main/res/layout/activity_splashscreen.xml
+++ b/App/app/src/main/res/layout/activity_splashscreen.xml
@@ -9,8 +9,8 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="88dp"
-        android:layout_height="67dp"
+        android:layout_width="173dp"
+        android:layout_height="157dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="184dp"
         android:layout_marginEnd="8dp"
@@ -24,9 +24,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="8dp"
         android:text="Setting up things for you..."
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/progressBar" />
